<resources>
    <string name="app_name">CampusDB</string>
    <string name="hint_first_name">Prénom</string>
    <string name="hint_last_name">Nom</string>
    <string name="hint_student_id">ID Étudiant</string>
    <string name="btn_add">Ajouter</string>
    <string name="btn_search">Rechercher</string>
    <string name="btn_delete">Supprimer</string>
    <string name="toast_added">Étudiant ajouté ✓</string>
    <string name="toast_deleted">Étudiant supprimé ✓</string>
    <string name="toast_not_found">Étudiant introuvable</string>
    <string name="toast_enter_id">Veuillez saisir un ID</string>
</resources>